# polymarket_langchain

./: .dockerignore  .env.example  .gitattributes  .gitignore  15MIN_MARKET_INTEGRATION.md  AGENT_FIX.md  ARCHITECTURE.md  BTC_15MIN_MARKET_DATA.md  CHANGELOG.md  CHARACTER_FINDER_README.md  CLAUDE.md  CODEBASE_BREAKDOWN.md  CONTRIBUTING.md  COROUTINE_EXCEPTION_HANDLING_README.md  CRYPTO_15M_SCANNER_SUMMARY.md  CRYPTO_TAGS_UPDATE_SUMMARY.md  DASHBOARD_README.md  DEEP_AGENT_README.md  DEPLOYMENT_GUIDE.md  Dockerfile  FLUENT_PYTHON_ALIGNMENT.md  GEMINI.md  IMPORT_FIXES.md  LICENSE.md  MERGE_CHECKLIST.md  METACLASS_VS_MODERN_VALIDATION_README.md  MYPY_SETUP.md  POLYMARKET_AGENTS_README.md  POLYMARKET_BITCOIN_MARKETS.md  QUICKSTART.md  QUICK_FIX_SUMMARY.md  QUICK_START.md  README.md  SOLUTION_SUMMARY.md  SPORTS_CRYPTO_SUMMARY.md  agent_with_backends.py  agent_with_models.py  agentic_rag_demo.py  automated_ml_workflow.py  automl_cli.py  (+52 more)
.claude/: code_guidelines.md  config.json  settings.local.json
.langgraph_api/: .langgraph_ops.pckl
agents/: config.py  deep_research_agent.py  tooling.py
data/: bet_recommendations.json  demo_cache.db  ingested_markets_20251228_113623.json  ingested_markets_20251228_113644.json  market_cache.db  markets.db  memory.db  ml_experiments.db  ml_strategy.json  predictions.json  sports_ml_dataset_real.parquet  sports_ml_dataset_real.validation.json  sports_ml_dataset_synthetic.parquet  sports_ml_dataset_synthetic.validation.json  standalone_ml.db  test_cache.db  training_features.csv
docs/: CRYPTO_15M_TRADING_GUIDE.md  CRYPTO_FETCHER_COMPLETE.md  CRYPTO_FETCHER_V2_IMPROVEMENTS.md  CRYPTO_TAGS_API_INTEGRATION.md  EXAMPLE.md  LANGCHAIN_REFERENCE.md  ML_INTEGRATION_README.md  OFFICIAL_API_ALIGNMENT.md  PAPER_TRADING_GUIDE.md  POLYMARKET_API_REFERENCE.md  README_REAL_DATA.md  README_SUBAGENTS.md  SIMULATOR_README.md  SPORTS_AND_CRYPTO_AGENT.md  UPDOWN_MARKETS_GUIDE.md  VIRTUAL_TRADING_GUIDE.md  WALLET_SETUP_GUIDE.md  WORKFLOW_POLITICS.md  memory_agent_mermaid.md
examples/: agent_with_backends.py  agent_with_models.py  agentic_rag_demo.py  automl_demo.py  backend_integration_example.py  demo_ml_pipeline.py  demo_ml_sports.py  fetch_active_bets.py  github_integration_demo.py  github_ml_demo.py  github_trading_demo.py  langchain_quickstart.py  market_prediction_nn.py  ml_system_demo.py  mnist_nn_training.py  simple_automl_demo.py  simple_ml_demo.py  sports_focus_demo.py  subagent_demo.py  track_15min_bitcoin.py  train_bitcoin_predictor.py
notebooks/: 01_polymarket_api.ipynb  02_langchain_tools.ipynb  03_memory_management.ipynb  04_langgraph_agents.ipynb  05_data_ingestion.ipynb  06_end_to_end_workflow.ipynb  07_github_agent.ipynb  08_context_engineering.ipynb  polymarket_agents.ipynb
scripts/: auto_paper_trader.py  backtest_updown.py  bet_planner.sh  check_wallet.py  crypto_15m_fetcher.py  crypto_market_fetcher.py  crypto_market_fetcher_v2.py  crypto_predictor.py  find_bitcoin_markets.py  find_updown_markets.py  nba_predictor.py  (+18 more)
(+237 files in other folders)
