[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-agents"
version = "0.2.0"
dependencies = [
    "langgraph",
    "langchain-openai",
    "py-clob-client",
    "python-dotenv",
    "pydantic",
    "pandas",
    "xgboost",
    "scheduler",
    "tavily-python",
    "newsapi-python"
]

[tool.setuptools.packages.find]
where = ["src"]