[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-agents"
version = "0.2.0"
dependencies = [
    "langgraph",
    "langchain-openai",
    "py-clob-client",
    "python-dotenv",
    "pydantic",
    "pandas",
    "xgboost",
    "scheduler",
    "tavily-python",
    "newsapi-python"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
polymarket_agents = ["py.typed"]

[tool.mypy]
ignore_missing_imports = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "polymarket_agents.*"
ignore_missing_imports = false
follow_imports = "normal"