[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-agents"
version = "0.2.0"
requires-python = ">=3.9"
dependencies = [
    # LangChain / LangGraph core
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langgraph",
    # HTTP clients
    "httpx",
    "requests",
    # Data / ML
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "xgboost",
    # Polymarket / trading
    "py-clob-client",
    "web3>=6,<7",
    # Config / utilities
    "python-dotenv",
    "pydantic",
    "structlog",
    "beautifulsoup4",
    "markdownify",
    "psutil",
    "scheduler",
    # External data sources
    "tavily-python",
    "newsapi-python",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
polymarket_agents = ["py.typed"]

[tool.mypy]
ignore_missing_imports = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "polymarket_agents.*"
ignore_missing_imports = false
follow_imports = "normal"

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "xgboost.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ccxt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tavily.*"
ignore_missing_imports = true